minor in robotics course

--- a/share/teaching/CourseML/01-linearModels/MT.cfg
+++ b/share/teaching/CourseML/01-linearModels/MT.cfg
@@ -9,7 +9,7 @@ M = 3
 outlierRate = .1
 outlierSigma = 10.
 
-modelFeatureType = 2
-rbfBias = 1
-rbfWidth = .2
-lambda = 1e-10
+modelFeatureType = 4
+rbfBias = 0
+rbfWidth = .5
+lambda = 1e-2 10
