--- a/share/src/extern/SWIFT_decomposer/Makefile
+++ b/share/src/extern/SWIFT_decomposer/Makefile
@@ -2,6 +2,8 @@ BASE   = ../../..
 NAME   = $(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/libextern_$(NAME).a
 
+MLR_NO_CXX11 = 1
+
 CXXFLAGS += -DSWIFT_DECOMP -DDECOMP_GRAPHICS -O3 -fPIC -w -IRAPID -I/usr/include/tcl8.5
 
 LIBS += -lqhull -lm -ltcl -ltk -lglut -lGLU -lXmu -lX11 -lGL
