liblewiner.so is noiw libextern_Lewiner.so

--- a/share/src/Gui/Makefile
+++ b/share/src/Gui/Makefile
@@ -9,7 +9,7 @@ GTKGL = 1
 FREEGLUT = 0
 QHULL = 1
 GRAPHVIZ = 1
-LEWINER = 1
+#LEWINER = 1
 DEPEND = Core extern_ply extern_GJK extern_Lewiner
 else
 QHULL = 1
