constraint motion with kuka

--- a/share/examples/MDP/mdp_pomdp/Makefile
+++ b/share/examples/MDP/mdp_pomdp/Makefile
@@ -1,9 +1,10 @@
-BASE = $(shell pwd)/../..
+BASE = $(shell pwd)/../../..
+
+DEPEND = Core MDP
 
 OBJS = main.o
 
 LAPACK = 1
-TONY = 1
 QT = 1## comment this line if you don't want to compile the GUI
 
 default: mdp.exe
