--- a/share/examples/Motion/RRT-PR2/Makefile
+++ b/share/examples/Motion/RRT-PR2/Makefile
@@ -1,6 +1,6 @@
 BASE = ../../..
 
-DEPEND = Motion Core Ors Gui Optim
+DEPEND = Motion Core Ors Gui Optim devTools
 LIBS += -lgtest
 
 include $(BASE)/make-generic
