--- a/share/examples/Motion/CMakeLists.txt
+++ b/share/examples/Motion/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 add_subdirectory(constraint)
 add_subdirectory(grasp)
 add_subdirectory(grasp_PR2)
