--- a/share/examples/Optim/CMakeLists.txt
+++ b/share/examples/Optim/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 add_subdirectory(constrained)
 add_subdirectory(exercises)
 add_subdirectory(kOrderMarkov)
