--- a/share/examples/System/CMakeLists.txt
+++ b/share/examples/System/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 add_subdirectory(module)
 add_subdirectory(module-sorting)
 add_subdirectory(module-vision)
