--- a/share/examples/Core/array/CMakeLists.txt
+++ b/share/examples/Core/array/CMakeLists.txt
@@ -1,4 +1,5 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
 add_executable(${NAME} main.cpp)
 
