--- a/share/examples/Ors/CMakeLists.txt
+++ b/share/examples/Ors/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 add_subdirectory(ors)
 add_subdirectory(ors_collision)
 add_subdirectory(ors_editor)
