--- a/share/projects/mlr_ros/circle_test/CMakeLists.txt
+++ b/share/projects/mlr_ros/circle_test/CMakeLists.txt
@@ -21,6 +21,7 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 rosbuild_add_executable(circle_test src/main.cpp)
 target_link_libraries(circle_test Core Ors Gui)
 
