--- a/share/src/Algo/CMakeLists.txt
+++ b/share/src/Algo/CMakeLists.txt
@@ -11,6 +11,8 @@ if(NOT LAPACK_FOUND)
 message(FATAL_ERROR "Lapack missing, but is required for Algo library")
 endif(NOT LAPACK_FOUND)
 
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 set(SOURCES     ${SOURCES}
                 algos.cpp
                 ann.cpp
