--- a/share/src/Core/CMakeLists.txt
+++ b/share/src/Core/CMakeLists.txt
@@ -7,6 +7,8 @@ set(SOURCES array_lapack.cpp)
 add_definitions(-DMT_LAPACK)
 endif(LAPACK_FOUND)
 
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 set(SOURCES     ${SOURCES}
                 core.cpp
                 array.cpp
