--- a/share/src/Hardware/kinect/CMakeLists.txt
+++ b/share/src/Hardware/kinect/CMakeLists.txt
@@ -3,6 +3,8 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 include(FindPkgConfig)
 pkg_check_modules(DEPLIB libfreenect)
 
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 if(DEPLIB_FOUND)
 set(SOURCES     ${SOURCES}
                 kinect.cpp
