--- a/share/src/Infer/CMakeLists.txt
+++ b/share/src/Infer/CMakeLists.txt
@@ -1,5 +1,7 @@
 include(CheckIncludeFileCXX)
 
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 set(SOURCES     ${SOURCES}
                 BinaryBP.cpp
                 BinaryBP.h
