--- a/share/src/Optim/CMakeLists.txt
+++ b/share/src/Optim/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 set(SOURCES     ${SOURCES}
         benchmarks.cpp
         constrained.cpp
