--- a/share/src/System/CMakeLists.txt
+++ b/share/src/System/CMakeLists.txt
@@ -1,5 +1,6 @@
-cmake_minimum_required(VERSION 2.6)
 project(MLR_CORE)
+
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
 set(SOURCES     ${SOURCES}
                 engine.cpp
