--- a/share/examples/Motion/dmp/Makefile
+++ b/share/examples/Motion/dmp/Makefile
@@ -1,6 +1,6 @@
 BASE = ../../..
 
 OBJS = main.o dmp.o
-DEPEND = Motion Core Ors Gui
+DEPEND = Motion Core Ors Gui Optim
 
 include $(BASE)/make-generic
