--- a/share/projects/13-dualExecution/2-testForceTouch/Makefile
+++ b/share/projects/13-dualExecution/2-testForceTouch/Makefile
@@ -1,5 +1,5 @@
 BASE = ../../..
 
-DEPEND = Motion Core Ors Gui Optim Perception
+DEPEND = Motion Core Ors Gui Optim
 
 include $(BASE)/make-generic
