changed CMakeLists of feedback_control

--- a/share/projects/feedback_control/CMakeLists.txt
+++ b/share/projects/feedback_control/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 )
 
+SET(CMAKE_CXX_FLAGS "-std=c++0x") 
+
 ###########################
 #   MLR
 ###########################
