--- a/share/projects/feedback_control/package.xml
+++ b/share/projects/feedback_control/package.xml
@@ -44,6 +44,8 @@
   <build_depend>control_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>rosbag</build_depend>
+  <run_depend>rosbag</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>control_msgs</run_depend>
   <run_depend>roscpp</run_depend>
