fixed includes and DEPENDs

--- a/share/examples/Perception/videoEncoder/Makefile
+++ b/share/examples/Perception/videoEncoder/Makefile
@@ -1,7 +1,7 @@
 BASE = ../../..
 
 GL = 1
-DEPEND = Gui Perception Hardware_VideoWriter Core
+DEPEND = Core Gui Perception
 
 include $(BASE)/make-generic
 
