--- a/share/examples/Hardware/g4_scene/Makefile
+++ b/share/examples/Hardware/g4_scene/Makefile
@@ -2,6 +2,6 @@ BASE = ../../..
 
 OBJS = main.o feedgnuplot.o
 
-DEPEND = Core Ors Gui Perception
+DEPEND = Core Ors Gui Perception extern_SWIFT
 
 include $(BASE)/make-generic
