--- a/share/examples/Hardware/kinect/Makefile
+++ b/share/examples/Hardware/kinect/Makefile
@@ -1,10 +1,5 @@
 BASE = ../../..
 
-QT = 1
-CXXFLAGS += -D__STDC_CONSTANT_MACROS
-LPATHS += /usr/local/lib
-LIBS += -lavformat -lavcodec -lavutil -lswscale -lx264 -lz
-
-DEPEND = Core System Hardware_kinect Hardware_VideoWriter Perception Gui
+DEPEND = Core System Hardware_kinect Perception Gui
 
 include $(BASE)/make-generic
