cleanup of the KinematicWorld extensions

--- a/share/src/Ors/Makefile
+++ b/share/src/Ors/Makefile
@@ -4,6 +4,7 @@ OUTPUT := $(BASE)/lib/$(NAME).so
 
 GL = 1
 PHYSX = 1
+ODE = 1
 DEPEND = Core Algo Gui extern_SWIFT
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
