--- a/share/projects/the_curious_robot/src/MT-ball.cfg
+++ b/share/projects/the_curious_robot/src/MT-ball.cfg
@@ -4,8 +4,7 @@ Hrate = 1e0
 timeSteps = 200
 duration = 4.
 
-orsFile = test.ors
-orsFile = ball.ors
+orsFile = world-ball.ors
 
 endeffector = robot
 Hratediag = [ 1 1 1 ]
