added slice definitions in a hierarchical fashion

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -21,6 +21,17 @@ if(TESTING_ENABLED)
                 set(TESTING_ENABLED)
         endif(GTEST_H_FOUND)
 endif(TESTING_ENABLED)
+option(PYTHON_ENABLED "Build python bindings using SWIG. Will be omitted of swig is not found" ON)
+if(PYTHON_ENABLED)
+  find_package(SWIG 2.0)
+  if(SWIG_FOUND)
+    include(${SWIG_USE_FILE})
+    find_package(PythonInterp 2.7)
+    find_package(PythonLibs 2.7)
+  else(SWIG_FOUND)
+    message(STATUS "swig not found, will not build Python bindings")
+  endif(SWIG_FOUND)
+endif(PYTHON_ENABLED)
 
 # common configuration
 include_directories(src)
