--- a/share/examples/System/CMakeLists.txt
+++ b/share/examples/System/CMakeLists.txt
@@ -1,6 +1,7 @@
-set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+# select what to compile
+include(.slicedef.cmake)
 
-add_subdirectory(module)
-add_subdirectory(module-sorting)
-add_subdirectory(module-vision)
+foreach(DIR ${CURRENT_SLICE})
+add_subdirectory(${DIR})
+endforeach(DIR ${CURRENT_SLICE})
 
