--- a/share/examples/Infer/CMakeLists.txt
+++ b/share/examples/Infer/CMakeLists.txt
@@ -1,4 +1,7 @@
-set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+# select what to compile
+include(.slicedef.cmake)
 
-add_subdirectory(infer)
+foreach(DIR ${CURRENT_SLICE})
+add_subdirectory(${DIR})
+endforeach(DIR ${CURRENT_SLICE})
 
