--- a/share/examples/Motion/CMakeLists.txt
+++ b/share/examples/Motion/CMakeLists.txt
@@ -1,8 +1,7 @@
-set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+# select what to compile
+include(.slicedef.cmake)
 
-add_subdirectory(constraint)
-add_subdirectory(grasp)
-add_subdirectory(grasp_PR2)
-add_subdirectory(motion)
-add_subdirectory(pfc)
+foreach(DIR ${CURRENT_SLICE})
+add_subdirectory(${DIR})
+endforeach(DIR ${CURRENT_SLICE})
 
