--- a/share/examples/Optim/CMakeLists.txt
+++ b/share/examples/Optim/CMakeLists.txt
@@ -1,7 +1,7 @@
-set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+# select what to compile
+include(.slicedef.cmake)
 
-add_subdirectory(constrained)
-add_subdirectory(exercises)
-add_subdirectory(kOrderMarkov)
-add_subdirectory(optimization)
+foreach(DIR ${CURRENT_SLICE})
+add_subdirectory(${DIR})
+endforeach(DIR ${CURRENT_SLICE})
 
