--- a/share/examples/Ors/CMakeLists.txt
+++ b/share/examples/Ors/CMakeLists.txt
@@ -1,12 +1,7 @@
-set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+# select what to compile
+include(.slicedef.cmake)
 
-add_subdirectory(ors)
-add_subdirectory(ors_collision)
-add_subdirectory(ors_editor)
-add_subdirectory(ors_physx)
-add_subdirectory(ors_physx_convex_submeshes)
-add_subdirectory(ors_physx_obstacle_avoidance)
-#add_subdirectory(orspy)
-add_subdirectory(ors_sceneGui)
-add_subdirectory(ors_swift)
+foreach(DIR ${CURRENT_SLICE})
+add_subdirectory(${DIR})
+endforeach(DIR ${CURRENT_SLICE})
 
