--- a/share/src/Hardware/CMakeLists.txt
+++ b/share/src/Hardware/CMakeLists.txt
@@ -1,2 +1,7 @@
-add_subdirectory(kinect)
+# select what to compile
+include(.slicedef.cmake)
+
+foreach(DIR ${CURRENT_SLICE})
+add_subdirectory(${DIR})
+endforeach(DIR ${CURRENT_SLICE})
 
