--- a/share/src/MDP/CMakeLists.txt
+++ b/share/src/MDP/CMakeLists.txt
@@ -1,8 +1,11 @@
+cmake_minimum_required(VERSION 2.6)
+project(MLR_CORE)
+
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
 include(.sources.cmake)
 
 add_library(MDP SHARED ${SOURCES})
-target_link_libraries(Algo LINK_PRIVATE Core Infer Gui)
+target_link_libraries(MDP LINK_PRIVATE Core Infer Gui)
 
 
