remove check stack macros

--- a/share/src/Core/CMakeLists.txt
+++ b/share/src/Core/CMakeLists.txt
@@ -10,16 +10,15 @@ endif(LAPACK_FOUND)
 include(CheckFunctionExists)
 check_function_exists(clock_nanosleep HAS_NANOSLEEP)
 if(NOT HAS_NANOSLEEP)
-cmake_push_check_state(RESET)
 set(CMAKE_REQUIRED_LIBRARIES rt)
 check_function_exists(clock_nanosleep HAS_NANOSLEEP)
 if(HAS_NANOSLEEP)
 message(STATUS "Adding librt to ${NAME} build for clock_nanosleep")
-target_link_libraries(${NAME} LINK_PRIVATE rt)
+target_link_libraries(${NAME} LINK_PRIVATE ${CMAKE_REQUIRED_LIBRARIES})
+unset(CMAKE_REQUIRED_LIBRARIES)
 else(HAS_NANOSLEEP)
 message(FATAL "Could not find clock_nanosleep in either libc or librt, stopping")
 endif(HAS_NANOSLEEP)
-cmake_pop_check_state()
 endif(NOT HAS_NANOSLEEP)
 
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
