try making dep public

--- a/share/src/Core/CMakeLists.txt
+++ b/share/src/Core/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_REQUIRED_LIBRARIES rt)
 check_function_exists(clock_nanosleep HAS_NANOSLEEP)
 if(HAS_NANOSLEEP)
 message(STATUS "Adding librt to ${NAME} build for clock_nanosleep")
-target_link_libraries(${NAME} LINK_PRIVATE ${CMAKE_REQUIRED_LIBRARIES})
+target_link_libraries(${NAME} LINK_PUBLIC ${CMAKE_REQUIRED_LIBRARIES})
 unset(CMAKE_REQUIRED_LIBRARIES)
 else(HAS_NANOSLEEP)
 message(FATAL_ERROR "Could not find clock_nanosleep in either libc or librt, stopping")
