--- a/share/src/Core/CMakeLists.txt
+++ b/share/src/Core/CMakeLists.txt
@@ -8,18 +8,18 @@ endif(LAPACK_FOUND)
 
 # check what we need for nanosleep
 include(CheckFunctionExists)
-check_function_exists(clock_nanosleep HAS_NANOSLEEP)
-if(NOT HAS_NANOSLEEP)
+check_function_exists(clock_nanosleep NANOSLEEP_IN_LIBC)
+if(NOT NANOSLEEP_IN_LIBC)
 set(CMAKE_REQUIRED_LIBRARIES rt)
-check_function_exists(clock_nanosleep HAS_NANOSLEEP)
-if(HAS_NANOSLEEP)
+check_function_exists(clock_nanosleep NANOSLEEP_IN_RT)
+if(NANOSLEEP_IN_RT)
 message(STATUS "Adding librt to ${NAME} build for clock_nanosleep")
 target_link_libraries(${NAME} LINK_PUBLIC ${CMAKE_REQUIRED_LIBRARIES})
 unset(CMAKE_REQUIRED_LIBRARIES)
-else(HAS_NANOSLEEP)
+else(NANOSLEEP_IN_RT)
 message(FATAL_ERROR "Could not find clock_nanosleep in either libc or librt, stopping")
-endif(HAS_NANOSLEEP)
-endif(NOT HAS_NANOSLEEP)
+endif(NANOSLEEP_IN_RT)
+endif(NOT NANOSLEEP_IN_LIBC)
 
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
