correct PIC property def

--- a/share/src/extern/ply/CMakeLists.txt
+++ b/share/src/extern/ply/CMakeLists.txt
@@ -1,5 +1,5 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
 add_library(extern_${NAME} STATIC ply.c)
-set_property(TARGET extern_${NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_target_properties(extern_${NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
