--- a/share/src/extern/Lewiner/CMakeLists.txt
+++ b/share/src/extern/Lewiner/CMakeLists.txt
@@ -3,5 +3,5 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 include(.sources.cmake)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../ply)
 add_library(extern_${NAME} STATIC ${SOURCES})
-set_property(TARGET extern_${NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_target_properties(extern_${NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
