next try at PIC...

--- a/share/src/extern/GJK/CMakeLists.txt
+++ b/share/src/extern/GJK/CMakeLists.txt
@@ -1,5 +1,6 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
-add_library(extern_${NAME} STATIC gjk.c)
-set_target_properties(extern_${NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
+set(SOURCES gjk.c)
+add_library(extern_${NAME} STATIC ${SOURCES})
+set_source_files_properties(${SOURCES} PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
