obscured /examples/Perception/keyframer

--- a/share/examples/Perception/keyframer/Makefile
+++ b/share/examples/Perception/keyframer/Makefile
@@ -1,12 +1,10 @@
-BASE = ../../../
+#BASE = ../../../
 
-DEPEND = Ors Gui Core Perception
+#DEPEND = Ors Gui Core Perception
 
-CXX = clang++
+#OBJS = $(shell find . -maxdepth 1 -name '*.cpp')
+#OBJS := $(OBJS:%.cpp=%.o)
 
-OBJS = $(shell find . -maxdepth 1 -name '*.cpp')
-OBJS := $(OBJS:%.cpp=%.o)
+#CLEAN = $(shell find . -maxdepth 1 -name 'z.*')
 
-CLEAN = $(shell find . -maxdepth 1 -name 'z.*')
-
-include $(BASE)/make-generic
+#include $(BASE)/make-generic
