--- a/share/src/Gui/CMakeLists.txt
+++ b/share/src/Gui/CMakeLists.txt
@@ -1,3 +1,5 @@
+get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+
 find_package(GTK2 REQUIRED gtk)
 
 include(CheckLibraryExists)
@@ -60,3 +62,14 @@ add_definitions(-DMT_GTKGL
 include_directories(${GTK2_INCLUDE_DIRS} ${GTKGL_INCLUDE_DIRS})
 add_definitions(${LAPACK_DEFINITIONS} ${GTK2_DEFINITIONS})
 
+# Python wrappers
+if(PYTHON_OK)
+  set(SWIG_SOURCES gui.i)
+  # add local include for mesh.h
+  include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${PYTHON_INCLUDES})
+  set_source_files_properties(${SWIG_SOURCES} PROPERTIES CPLUSPLUS ON)
+  string(TOLOWER ${NAME}py PY)
+  set(CMAKE_SWIG_FLAGS -module _${PY})
+  swig_add_module(${PY} python ${SWIG_SOURCES})
+  swig_link_libraries(${PY} ${NAME} ${PYTHON_LIBRARIES})
+endif(PYTHON_OK)
