--- a/share/src/Motion/CMakeLists.txt
+++ b/share/src/Motion/CMakeLists.txt
@@ -1,5 +1,4 @@
-cmake_minimum_required(VERSION 2.6)
-project(MLR_CORE)
+get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
@@ -9,4 +8,13 @@ add_library(Motion SHARED ${SOURCES})
 
 target_link_libraries(Motion Core Ors Optim Algo)
 
-
+# Python wrappers
+if(PYTHON_OK)
+  set(SWIG_SOURCES motion.i)
+  include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${PYTHON_INCLUDES})
+  set_source_files_properties(${SWIG_SOURCES} PROPERTIES CPLUSPLUS ON)
+  string(TOLOWER ${NAME}py PY)
+  set(CMAKE_SWIG_FLAGS -module _${PY})
+  swig_add_module(${PY} python ${SWIG_SOURCES})
+  swig_link_libraries(${PY} ${NAME} ${PYTHON_LIBRARIES})
+endif(PYTHON_OK)
