--- a/share/src/Ors/CMakeLists.txt
+++ b/share/src/Ors/CMakeLists.txt
@@ -20,3 +20,13 @@ include(.sources.cmake)
 add_library(Ors SHARED ${SOURCES})
 target_link_libraries(Ors LINK_PRIVATE Algo Core Gui extern_SWIFT)
 
+# Python wrappers
+if(PYTHON_OK)
+  set(SWIG_SOURCES ors.i)
+  include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${PYTHON_INCLUDES})
+  set_source_files_properties(${SWIG_SOURCES} PROPERTIES CPLUSPLUS ON)
+  string(TOLOWER ${NAME}py PY)
+  set(CMAKE_SWIG_FLAGS -module _${PY})
+  swig_add_module(${PY} python ${SWIG_SOURCES})
+  swig_link_libraries(${PY} ${NAME} ${PYTHON_LIBRARIES})
+endif(PYTHON_OK)
