--- a/share/examples/Motion/constraint/CMakeLists.txt
+++ b/share/examples/Motion/constraint/CMakeLists.txt
@@ -3,7 +3,7 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 include(.sources.cmake)
 add_executable(x_${NAME} ${SOURCES})
 
-target_link_libraries(x_${NAME} Motion Perception)
+target_link_libraries(x_${NAME} Gui Motion Perception)
 
 add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
 
