--- a/share/src/Hardware/G4/CMakeLists.txt
+++ b/share/src/Hardware/G4/CMakeLists.txt
@@ -1,7 +1,7 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
-option(USE_G4 "Enable G4 Tracker" ON)
+option(USE_G4 "Enable G4 Tracker" OFF)
 set(G4ROOT $ENV{MLR_LIBPATH} CACHE PATH "Base dir for G4 tracker" )
 
 if(USE_G4)
@@ -12,12 +12,12 @@ message(STATUS "G4Track location: ${G4TRACK}")
 if(G4TRACK)
 include(.sources.cmake)
 
-set(TARGET libHardware_${NAME})
+set(TARGET Hardware_${NAME})
 add_library(${TARGET} SHARED ${SOURCES})
-include_directories(${DEPLIB_INCLUDE_DIRS})
-add_definitions(${DEPLIB_CFLAGS})
+#include_directories(${DEPLIB_INCLUDE_DIRS})
+#add_definitions(${DEPLIB_CFLAGS})
 target_link_libraries(${TARGET} 
-        LINK_PRIVATE Core ${DEPLIB_LIBRARY_DIR} ${DEPLIB_LIBRARIES})
+        LINK_PRIVATE Core ${G4TRACK})
 
 else(G4TRACK)
 message(STATUS "G4 tracker support not built because libG4Track not found (checked in ${G4ROOT})")
