--- a/share/src/devTools/CMakeLists.txt
+++ b/share/src/devTools/CMakeLists.txt
@@ -2,6 +2,5 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
 include(.sources.cmake)
 
-add_library(extern_${NAME} STATIC ${SOURCES})
-set_property(TARGET extern_${NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
+add_library(${NAME} ${SOURCES})
 
