--- a/share/projects/the_curious_robot/src/MT-pr2.cfg
+++ b/share/projects/the_curious_robot/src/MT-pr2.cfg
@@ -11,4 +11,4 @@ Hratediag = [ 1 1 1 1 1 1 1 1 1 2 ]
 # order: base_x base_y base_rot shoulder_pan shoulder_lift upper_arm_roll elbow_flex forarm_roll wrist_flex wrist_roll
 joint_max = [  6  6  3.1415 2.2689 1.3962 3.9095 2.3212  3.1415  2.2689  3.1415 ]
 joint_min = [ -6 -6 -3.1415 -.6981 -.5235 -.7679 0      -3.1415  0      -3.1415 ]
-agent_shapes = [ 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 ]
+agent_shapes = [ 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 ]
