--- a/share/examples/Motion/RRT-PR2/MT.cfg
+++ b/share/examples/Motion/RRT-PR2/MT.cfg
@@ -4,7 +4,7 @@ Hrate = 1e-0
 timeSteps = 200
 duration = 5.
 
-orsFile = test.ors
-orsFile = ball.ors
-orsFile = world.ors
-
+Hratediag = [ 1e1 1e1 1e1 .1 .1 .1 .1 .1 .1 .1 ]
+joint_max = [  6  6  3.1415 2.2689 1.3962 3.9095 2.3212  3.1415  2.2689  3.1415 ]
+joint_min = [ -6 -6 -3.1415 -.6981 -.5235 -.7679 0      -3.1415  0      -3.1415 ]
+agent_shapes = [ 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 ]
