opencv raw a bit fixed

--- a/share/src/Perception/Makefile
+++ b/share/src/Perception/Makefile
@@ -5,7 +5,7 @@ OUTPUT := $(BASE)/lib/$(NAME).so
 LAPACK = 1
 OPENCV = 1
 #PCL = 1
-DEPEND = Core Gui extern_libcolorseg
+DEPEND = Core Gui extern_libcolorseg Ors
 
 CXXFLAGS += -D__STDC_CONSTANT_MACROS
 LIBS += -lavformat -lavcodec -lavutil -lswscale -lx264 -lz
