--- a/share/examples/Hardware/kinect/Makefile
+++ b/share/examples/Hardware/kinect/Makefile
@@ -1,5 +1,5 @@
 BASE = ../../..
 
-DEPEND = Core System Hardware_kinect Perception Gui
+DEPEND = Core System Hardware_kinect Perception Gui Ors
 
 include $(BASE)/make-generic
