added trajectory execution example

--- a/share/examples/Motion/trajectoryExecution/Makefile
+++ b/share/examples/Motion/trajectoryExecution/Makefile
@@ -1,5 +1,10 @@
 BASE = ../../..
 
-DEPEND = Core Ors Motion
+DEPEND = Core Ors Motion Gui Optim
+
+OBJS = main.o ../splines/spline.o ../pfc/pfc.o ../pfc/mobject.o ../mpc/mpc.o ../dmp/dmp.o
+LIBS += -lGL
+all: $(OBJS)
+
 
 include $(BASE)/make-generic
