--- a/share/examples/Motion/motionpy/MT.cfg
+++ b/share/examples/Motion/motionpy/MT.cfg
@@ -1,10 +1,10 @@
 
 transitionType = 1
-Wrate = 1e0
-Hrate = 1e0
+Hrate = 1e-0
 timeSteps = 200
-duration = 4.
+duration = 5.
 
-orsFile = test.ors
-orsFile = ball.ors
-
+Hratediag = [ .001 .001 .1 .1 .1 .1 .1 .1 .1 .1 ]
+joint_max = [  6  6  3.1415 2.2689 1.3962 3.9095 2.3212  3.1415  2.2689  3.1415 ]
+joint_min = [ -6 -6 -3.1415 -.6981 -.5235 -.7679 0      -3.1415  0      -3.1415 ]
+agent_shapes = [ 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 ]
