--- a/share/examples/Perception/vision-modules/CMakeLists.txt
+++ b/share/examples/Perception/vision-modules/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 include(.sources.cmake)
 add_executable(x_${NAME} ${SOURCES})
 
-target_link_libraries(x_${NAME} Ors Gui Core Perception)
+target_link_libraries(x_${NAME} Ors Gui Core Perception System)
 
 add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
