--- a/share/src/Algo/CMakeLists.txt
+++ b/share/src/Algo/CMakeLists.txt
@@ -16,8 +16,8 @@ set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 include(.sources.cmake)
 
 add_library(Algo SHARED ${SOURCES})
-target_link_libraries(Algo LINK_PRIVATE Core ann)
-add_definitions(-DMT_ANN -DMT_LAPACK)
+target_link_libraries(Algo LINK_PRIVATE Core Gui ann)
+add_definitions(-DMT_ANN)
 
 include_directories(${LAPACK_INCLUDE_DIR})
 add_definitions(${LAPACK_DEFINITIONS})
