--- a/share/src/Gui/CMakeLists.txt
+++ b/share/src/Gui/CMakeLists.txt
@@ -41,7 +41,7 @@ include(.sources.cmake)
 
 add_library(Gui SHARED ${SOURCES})
 target_link_libraries(Gui LINK_PRIVATE Core 
-        extern_GJK extern_ply 
+        extern_GJK extern_ply extern_Lewiner
         ${GTKGL_LIBRARY_DIRS} 
         ${GTKGL_LIBRARIES} 
         ${GTK2_LIBRARIES} 
@@ -55,8 +55,6 @@ add_definitions(-DMT_GTKGL
         -DMT_GL
         -DMT_QHULL 
         -DMT_GRAPHVIZ 
-        -DMT_extern_GJK 
-        -DMT_extern_ply
 )
 
 include_directories(${GTK2_INCLUDE_DIRS} ${GTKGL_INCLUDE_DIRS})
