more consistent use flags

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -30,8 +30,8 @@ message(STATUS "Use of OpenCV disabled by user (option USE_OPENCV)")
 endif(USE_OPENCV)
 
 # allow users to switch off compilation of unit-tests
-option(TESTING_ENABLED "Should we run unit-tests (default yes)" ON)
-if(TESTING_ENABLED)
+option(USE_GTEST "Should we run unit-tests (default yes)" ON)
+if(USE_GTEST)
   option(EXAMPLES_AS_TESTS "Should examples be used as tests? (default yes)" ON)
         include(CheckIncludeFileCXX)
         check_include_file_cxx("gtest/gtest.h" GTEST_H_FOUND)
@@ -46,11 +46,11 @@ if(TESTING_ENABLED)
                         message(WARNING "Did not find gtest.h, cannot enable testing")
                 set(TESTING_ENABLED)
         endif(GTEST_H_FOUND)
-endif(TESTING_ENABLED)
+endif(USE_GTEST)
 
 # configure Python
-option(ENABLE_PYTHON "Build python bindings using SWIG. Will be omitted of swig or NumPy are not found" ON)
-if(ENABLE_PYTHON)
+option(USE_PYTHON "Build python bindings using SWIG. Will be omitted of swig or NumPy are not found" ON)
+if(USE_PYTHON)
   find_package(SWIG 2.0)
   if(SWIG_FOUND)
     include(${SWIG_USE_FILE})
@@ -71,7 +71,7 @@ if(ENABLE_PYTHON)
   else(SWIG_FOUND)
     message(STATUS "swig not found, will not build Python bindings")
   endif(SWIG_FOUND)
-endif(ENABLE_PYTHON)
+endif(USE_PYTHON)
 
 # common configuration
 include_directories(src)
