--- a/share/src/Ors/CMakeLists.txt
+++ b/share/src/Ors/CMakeLists.txt
@@ -1,16 +1,16 @@
 # TODO add automatic checking for presence
-option(MT_PHYSX "Use NVidia PhysX libraries" OFF)
-if(MT_PHYSX)
+option(USE_PHYSX "Use NVidia PhysX libraries" OFF)
+if(USE_PHYSX)
         add_definitions(-DMT_PHYSX)
-endif(MT_PHYSX)
-option(MT_ODE "Use ODE" OFF)
-if(MT_ODE)
+endif(USE_PHYSX)
+option(USE_ODE "Use ODE" OFF)
+if(USE_ODE)
         add_definitions(-DMT_ODE)
-endif(MT_ODE)
-option(MT_OPENMP "Use OpenMP" OFF)
-if(MT_OPENMP)
+endif(USE_ODE)
+option(USE_OPENMP "Use OpenMP" OFF)
+if(USE_OPENMP)
         add_definitions(-fopenmp -DOPENMP)
-endif(MT_OPENMP)
+endif(USE_OPENMP)
 # TODO option(MT_CUDA "Use CUDA" OFF)
 
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
